--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
+    "@types/node": "^22.2.0",
     "gh-pages": "^6.1.1",
     "typescript": "^5.5.3",
     "vite": "^5.4.0"
